--- a/src/components/MovieModal/MovieModal.module.css
+++ b/src/components/MovieModal/MovieModal.module.css
@@ -16,8 +16,8 @@
 .modal {
   background-color: white;
   border-radius: 8px;
-  max-width: 800px; /* <-- Змінюєш максимальну ширину картки */
-  width: 90%;       /* <-- Змінюєш ширину картки відносно екрану */
+  max-width: 950px; 
+  width: 90%;      
   padding: 20px;
   position: relative;
   box-shadow: 0 2px 10px rgba(0,0,0,0.3);
@@ -28,13 +28,13 @@
   top: 10px;
   right: 10px;
   border: none;
-  background-color: black; /* <-- Додаємо чорний фон */
-  color: white;            /* <-- Робимо хрестик білим */
+  background-color: black; 
+  color: white;            
   font-size: 24px;
   cursor: pointer;
-  border-radius: 50%;      /* <-- Додатково, щоб хрестик був в кружечку */
-  width: 36px;             /* <-- Ширина кнопки */
-  height: 36px;            /* <-- Висота кнопки */
+  border-radius: 50%;     
+  width: 36px;          
+  height: 36px;           
   display: flex;
   align-items: center;
   justify-content: center;
