--- a/src/components/MovieGrid/MovieGrid.module.css
+++ b/src/components/MovieGrid/MovieGrid.module.css
@@ -1,9 +1,7 @@
-.moviesList {
+.moviesGrid {
   display: grid;
   grid-template-columns: repeat(5, 1fr); 
-  grid-template-rows: repeat(3, auto);  
-  gap: 10px;                             
-  justify-content: center;             
-  padding: 30 60px;                     
-   padding: 16px;
-  }
+  grid-auto-rows: auto; 
+  gap: 16px; 
+}
+
